 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4574: Eliminate identity vertex for order by and skewed join right after LOAD (rohini)

PIG-4365: TOP udf should implement Accumulator interface (eyal via rohini)

PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

BUG FIXES

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4636: Occurred spelled incorrectly in error message for Launcher and POMergeCogroup (stevenmz via daijy)

PIG-4624: Error on ORC empty file without schema (daijy)

PIG-3622: Allow casting bytearray fields to bytearray type (redisliu via daijy)

PIG-4618: When use tez as the engine , set pig.user.cache.enabled=true do not take effect (wisgood via rohini)

PIG-4533: Document error: Pig does support concatenated gz file (xhudik via daijy)

PIG-4578: ToDateISO should support optional ' ' space variant used by JDBC (michaelthoward via daijy)

Release 0.15.0
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4560: Pig 0.15.0 Documentation (daijy)

PIG-4429: Add Pig alias information and Pig script to the DAG view in Tez UI (daijy)

PIG-3994: Implement getting backend exception for Tez (rohini)

PIG-4563: Upgrade to released Tez 0.7.0 (daijy)

PIG-4525: Clarify "Scalar has more than one row in the output." (Niels Basjes via gates)

PIG-4511: Add columns to prune from PluckTuple (jbabcock via cheolsoo)

PIG-4434: Improve auto-parallelism for tez (daijy)

PIG-4495: Better multi-query planning in case of multiple edges (rohini)

PIG-3294: Allow Pig use Hive UDFs (daijy)

PIG-4476: Fix logging in AvroStorage* classes and SchemaTuple class (rdsr via rohini)

PIG-4458: Support UDFs in a FOREACH Before a Merge Join (wattsinabox via daijy)

PIG-4454: Upgrade tez to 0.6.0 (daijy)

PIG-4451: Log partition and predicate filter pushdown information and fix optimizer looping (rohini)
