@@ -30,9 +30,11 @@ PIG-4365: TOP udf should implement Accumulator interface (eyal via rohini)
 
 PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)
 
-BUG FIXES
-
 PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)
+
+PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)
+
+BUG FIXES
 
 PIG-4636: Occurred spelled incorrectly in error message for Launcher and POMergeCogroup (stevenmz via daijy)
 
